<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eAlarm 2.0</string>
    <string name="master_enable_checkbox">Dienst aktivieren</string>
    <string name="master_enable_checkbox_summary">Wenn deaktiviert, werden keine Nachrichten angezeigt.</string>
    <string name="choose_notification_tone">Ton auswählen</string>
    <string name="choose_notification_tone_summary">Ton wählen</string>
    <string name="stop_reading_now">Sprachausgabe unterbrechen</string>
    <string name="stop_reading_now_summary">Sprachausgabe sofort stoppen</string>
    <string name="delay_readout">Sprachausgabe verzögern</string>
    <string name="delay_readout_summary" formatted="false">Sprachausgabe um %d Sekunden verzögern%s.</string>
    <string name="advanced_settings">Erweitere Einstellungen</string>
    <string name="advanced_settings_summary">Erweiterte Einstellungen anpassen.</string>
    <string name="preview">Vorschau</string>
    <string name="preview_summary">Vorschau der Sprache und Lesegeschwindkeit</string>
    <string name="preview_speak">Dies ist eine Nachricht</string>
    <string name="shakestop">Schütteln um zu stoppen</string>
    <string name="shakestop_summary">Durch Schütteln des Smartphones Sprachausgabe unterbrechen</string>
    <string name="shakethreshhold">Intensität des Schüttelns</string>
    <string name="shakethreshhold_summary">Derzeit %d, Werk: 1500.</string>
    <string name="shakewaittime">Wartezeitraum für Schütteln</string>
    <string name="shakewaittime_summary">%d Sekunden auf Schütteln warten</string>
    <string name="speakformat">TTS Format</string>
    <string name="speakformat_summary" formatted="false">%s für Regel, %m für Meldung, %t für Titel</string>
    <string name="notification_settings">Benachrichtigungseinstellungen</string>
    <string name="notification_settings_summary">Einstellungen wie Nachrichten zugestellt werden.</string>
    <string name="play_ringtone">Sound abspielen</string>
    <string name="play_ringtone_summary">Sound abspielen wenn eine Nachricht eingeht</string>
    <string name="vibrate">Vibrationsalarm</string>
    <string name="vibrate_summary">Vibrationsalarm wenn eine Nachricht eingeht</string>
    <string name="led_flash">LED blinken</string>
    <string name="led_flash_summary">LED blinken wenn eine Nachricht eingeht</string>
    <string name="speak_message">Nachricht vorlesen</string>
    <string name="speak_message_summary">Nachricht vorlesen durch Sprachausgabe</string>
    <string name="disable_all_notifications">Alle Benachrichtigungen deaktivieren</string>
    <string name="enable_all_notifications">Alle Benachrichtigungen aktivieren</string>
    <string name="recent_messages">Alarmierungen anzeigen</string>
    <string name="rules">Regeln</string>
    <string name="enabled_locally">Lokal aktiveren</string>
    <string name="enabled_locally_summary">Wenn deaktiviert, empfängt das Smartphone Nachrichten aber benachrichtigt nicht.</string>
    <string name="messages">Benachrichtigungen</string>
    <string name="settings_heading">Einstellungen</string>
    <string name="choose_accounts_heading">eAlarm - Account auswählen</string>
    <string name="rules_heading">eAlarm - Regeln verwalten</string>
    <string name="editor_heading">eAlarm - Regel bearbeiten</string>
    <string name="messages_heading">eAlarm - Letzte Nachrichten</string>
    <string name="message_detail_heading">eAlarm - Nachricht</string>
    <string name="no_rules">Keine Regel gefunden.</string>
    <string name="no_recent_messages">Keine Benachrichtigungen vorhanden.</string>
    <string name="create_rule">Regel erstellen</string>
    <string name="create_rule_message">Name für die neue Regel eingeben</string>
    <string name="delete_rule">Regel löschen?</string>
    <string name="delete_rule_message">Wenn die Regel gelöscht wird können keine Benachrichtigungen mehr an sie gesendet werden. Das Löschen kann nicht rückgängig gemacht werden.</string>
    <string name="rule_editor_title">Name</string>
    <string name="rule_notification_settings_summary">Benachrichtigungen für Regel anpassen</string>
    <string name="rule_message_summary">Die letzten Nachrichten dieser Regel anzeigen.</string>
    <string name="rule_delete_summary">Regel löschen</string>
    <string name="rule_global_notifications">Einstellungen zurücksetzen</string>
    <string name="rule_global_notifications_summary">Die eAlarm Voreinstellungen verwenden.</string>
    <string name="messages_all_title">eAlarm - Alle Benachrichtigungen</string>
    <string name="messages_rule_title" formatted="false">Nachrichten - %s</string>
    <string name="need_tts_data_installed">TTS Daten sind nicht installiert - weiterleiten zu den Daten.</string>
    <string name="health_check_disabled">Alle Benachrichtigungen sind inaktiv.</string>
    <string name="health_check_placeholder">Statusinformationen</string>
    <string name="health_check_all_ok">Status: Bereit</string>
    <string name="health_error_no_gcm_id">Keine GCM ID. Bitte warten oder Anwendung neu starten.</string>
    <string name="health_error_gcm_error">Fehler beim Ermitteln der GCM ID: </string>
    <string name="health_error_no_rules">Keine Regel vorhanden</string>
    <string name="health_error_disabled_local_rules" formatted="false">%d inaktive Regel%s.</string>
    <string name="create">Erstellen</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete">Löschen</string>
    <string name="delete_all">Alle löschen</string>
    <string name="delete_read">Lösche gelesene Nachrichten</string>
    <string name="main_menu">Hauptmenü</string>
    <string name="settings">Einstellungen</string>
    <string name="mark_all_as_seen">Alle als gelesen markieren</string>
    <string name="message_list">Nachrichtenliste</string>
    <string name="stopReadingNow">stopReadingNow</string>
    <string name="masterEnable">masterEnable</string>
    <string name="choosenNotification">choosenNotification</string>
    <string name="previewSpeech">previewSpeech</string>
    <string name="delayReadingTime">delayReadingTime</string>
    <string name="shakeToStop">shakeToStop</string>
    <string name="shakeThreshold">shakeThreshold</string>
    <string name="shakeWaitTime">shakeWaitTime</string>
    <string name="playRingtone">playRingtone</string>
    <string name="vibrateNotify">vibrateNotify</string>
    <string name="ledFlash">ledFlash</string>
    <string name="speakMessage">speakMessage</string>
    <string name="speakFormat">speakFormat</string>
    <string name="app_name_homescreen">&quot; eAlarm 2.0&quot;</string>
    <string name="showToast">showToast</string>
    <string name="showWindow">Fenster anzeigen</string>
    <string name="showWindow_summary">Fenster auf Hauptscreen anzeigen</string>
    <string name="about">Info</string>
    <string name="version">Version</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="update_question">Eine neuere Version der Anwendung ist in GooglePlay verfügbar.\n\nIm PlayStore aufrufen?</string>
    <string name="update_title">Update verfügbar</string>
    <string name="devicekey">devicekey</string>
    <string name="overwritesystem">Klingeln trotz Lautlos</string>
    <string name="overwritesystem_summary">Gibt an ob bei einer Benachrichtigung das Smartphone klingeln soll auch wenn es lautlos geschalten ist</string>
    <string name="overwritesystem_setting">overwritesystem</string>
    <string name="map_heading">Ort</string>
    <string name="zoomlevel">zoomlevel</string>
    <string name="beta">beta version</string>
    <string name="help">Hilfe anzeigen</string>
    <string name="menu_legalnotices">Legal Notices</string>
    <string name="playsound_not_checked">Die Option \"Sound abspielen\" ist nicht gewählt.</string>
    <string name="no_sound_chosen">Es ist kein Ton ausgewählt.</string>
    <string name="stopTime">Stopzeit</string>
    <string name="startTime">Startzeit</string>
    <string name="encryption">Entschlüsselung</string>
    <string name="encryption_summary">Bietet die Möglichkeit seitens des Windows Services verschlüsselte Narchichten wieder zu entschlüsseln</string>
    <string name="encryption_summary_enable">Bietet die Möglichkeit die Entschlüsselung zu de-/aktivieren.</string>
    <string name="encryption_key">Passwort</string>
    <string name="encryption_key_summary">Das zur Entschlüsselung benötigte Passwort.</string>
    <string name="open_summary">Bietet die Möglichkeit die App während der Verwendung des Telefons in den Vordergrund zu bringen.Bietet die Möglichkei</string>
    <string name="open_title">App öffnen</string>
    <string name="open">open</string>
    <string name="unlock_summary">Bietet die Möglichkeit das Gerät aufzuwecken und die App in den Vordergrund zu bringen.</string>
    <string name="unlock_title">Sicherheitsperre umgehen und aufwecken</string>
    <string name="unlock">unlock</string>

</resources>